# OCSLC

./: .gitignore  CLAUDE.md  OptiSwi.py  README.md  TODO.md  closed_loop_mpc_advanced.py  opti_swi.py  plots_notebook.ipynb  prova.ipynb  pyproject.toml  test_expm.py
examples/: MANNEGG_A_TE_CHE_NON_SCEGLI_I_NOMI_E_CHIAMI_LE_COSE_PROVA.ipynb  cartpole.py  example_cartpole.py  example_jumping_leg.py  example_non_autonomous_linear.py  example_pannocchia.py  example_time_varying_constraints.py  example_w_constraints.py  example_w_constraints_2.py  new_example_oclsc.py  non_autonomous_linear.py  pannocchia.py  plot_timesteps_hist_inputs.ipynb  solve_time_vs_timesteps.ipynb  stiff_system.py  stiff_system_times.py  time_varying_constraints.py  timesteps_histogram.ipynb  toy_problem.py
examples/csv/: solve_times.csv
examples/two_stage_optimization/: first_example.py
ocslc/: __init__.py  corn.py  receding_horizon_mpc.py  switched_linear.py  switched_linear_mpc.py
ocslc/utils/: disp.py  mpc_animator.py  str2bool.py
test/: example_1.py  test_switched_linear.py  test_switched_linear_mpc.py
utils/: Switched_Linear.py  sym_functions.py
